tests/cases/errors/nba_to_procedural_local/main.sv
module Top;
  initial begin
    int local_q;
    local_q <= 5;
  end
endmodule
